2015d07 - refactor